--- a/config/crd/bases/globals.jnnkrdb.de_globalsecrets.yaml
+++ b/config/crd/bases/globals.jnnkrdb.de_globalsecrets.yaml
@@ -12,6 +12,9 @@ spec:
     kind: GlobalSecret
     listKind: GlobalSecretList
     plural: globalsecrets
+    shortNames:
+    - gs
+    - gss
     singular: globalsecret
   scope: Namespaced
   versions:
@@ -39,27 +42,22 @@ spec:
                 additionalProperties:
                   type: string
                 type: object
-              immutable:
-                default: false
-                type: boolean
               namespaces:
+                description: struct which contains the information about the namespace
+                  regex
                 properties:
                   avoidregex:
                     default:
                     - default
                     items:
                       type: string
-                    minItems: 1
                     type: array
-                    uniqueItems: true
                   matchregex:
                     default:
                     - default
                     items:
                       type: string
-                    minItems: 1
                     type: array
-                    uniqueItems: true
                 required:
                 - avoidregex
                 - matchregex
@@ -77,7 +75,6 @@ spec:
                 type: string
             required:
             - data
-            - immutable
             - namespaces
             - type
             type: object
@@ -150,6 +147,10 @@ spec:
                   - reason
                   - status
                   - type
+                  type: object
+                type: array
+              deployedsecrets:
+                items:
                   type: object
                 type: array
             type: object
